# VA

./: README.md
Lab1/StudentVersion/: CMakeLists.txt
Lab1/StudentVersion/build2015/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AdvancedVisualization.sln  CMakeCache.txt  Practica1.vcxproj  Practica1.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Lab1/StudentVersion/build2015/Debug/: Practica1.ilk
Lab1/StudentVersion/build2015/Practica1.dir/Debug/Practica1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Practica1.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Lab1/StudentVersion/build2015/Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
Lab1/StudentVersion/build2015/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
Lab1/StudentVersion/src/: Application.cpp  Application.h  Camera.cpp  Mesh.cpp  Mesh.h  Utils.cpp  Utils.h  main.cpp
Lab2/: CMakeLists.txt  Memoria.docx
Lab2/build2015/: ALL_BUILD.vcxproj  Cube.h  Practica1.vcxproj.filters  Practica2.vcxproj.filters
Lab2/build2015/Debug/: Practica1.ilk  Practica2.ilk  teapot.ASE
Lab2/build2015/Practica1.dir/Debug/Practica1.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog
Lab2/build2015/Practica2.dir/Debug/Practica2.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.read.1.tlog
Lab2/build2015/Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
Lab2/build2015/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.write.1.tlog
Lab2/res/: Girl.ASE
Lab2/src/: Application.cpp  Application.h  Mesh.cpp  Mesh.h  Utils.cpp  Utils.h  main.cpp
Lab3/: INSTALL.txt
Lab3/build2015/: AdvancedVisualization.VC.VC.opendb  AdvancedVisualization.sln  Practica1.vcxproj  Practica2.vcxproj  Triangle.h  ZERO_CHECK.vcxproj.filters
Lab3/build2015/Practica1.dir/Debug/Practica1.tlog/: CL.read.1.tlog  link.read.1.tlog  link.write.1.tlog
Lab3/build2015/Practica2.dir/Debug/Practica2.tlog/: CL.read.1.tlog  link.command.1.tlog  link.write.1.tlog
Lab3/build2015/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.read.1.tlog
Lab3/res/: torsoDiffuseMap.tga
Lab3/src/: Camera.cpp  Camera.h  Maths.cpp  Maths.h  Texture.cpp  Texture.h  Triangle.h  includes.h
Lab3/src/extra/: TextParser.cpp
Lab3/src/shaders/: Fragment_1.glsl  Fragment_3.glsl  Vertex_1.glsl  Vertex_3.glsl
StudentVersion/build2015/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Practica1.vcxproj  Practica1.vcxproj.filters
StudentVersion/build2015/Debug/: Practica1.ilk
StudentVersion/build2015/Practica1.dir/Debug/Practica1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog
StudentVersion/build2015/Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
StudentVersion/build2015/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate
StudentVersion/src/: Application.cpp  Application.h  Mesh.cpp  Mesh.h
